--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,19 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 			<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 			<meta name="robots" content="index, follow">
-			
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+			<!-- css minifié-->
+			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+			<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
-		<script src="./js/jquery-2.1.0.min.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<script src="./js/blocs.min.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
-		<script src="./js/formHandler.js"></script>
+			<!-- js minifié-->
+			<script src="./js/jquery-2.1.0.min.js"></script>
+			<script src="./js/bootstrap.min.js"></script>
+			<script src="./js/blocs.js"></script>
+			<script src="./js/jqBootstrapValidation.min.js"></script>
+			<script src="./js/formHandler.min.js"></script>
+			<script defer src="./js/gmaps.min.js"></script>
 
 		<title>La Chouette agence - Contact</title>
 
@@ -27,7 +29,7 @@
 	</head>
 	<body>
 	<!-- Principal conteneur -->
-		<main class="page-container">				
+		<div class="page-container">				
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
@@ -157,5 +159,5 @@
 			</footer>
 			<!-- Footer - bloc-8 END -->
 			<!-- Principal conteneur END -->
-		</main>
+		</div>
 </html>
