--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html lang="fr">
 	<head>
 			<meta charset="utf-8">
+			<!-- Description content changed -->
 			<meta name="description" content="Meilleure entreprise webdisgn de Lyon. La Chouette agence vous aide pour vos demande concernant: stratégie web, web design, illustrations, design de site web.">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 			<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+			<!-- Follow pour rbots -->
 			<meta name="robots" content="index, follow">
 			
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+			<!-- css minifié-->
+			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+			<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+
+			<!-- js minifié-->
+			<script src="./js/jquery-2.1.0.min.js"></script>
+			<script src="./js/bootstrap.min.js"></script>
+			<script src="./js/blocs.js"></script>
+			<script src="./js/jqBootstrapValidation.min.js"></script>
+			<script src="./js/formHandler.min.js"></script>
+			<script defer src="./js/jquery.touchSwipe.min.js"></script>
+			<script defer src="./js/gmaps.min.js"></script>
 		
-			
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
 
 		<title>Entreprise webdesign Lyon - La Chouette agence</title>
 	<!-- Analytics -->
@@ -25,8 +31,8 @@
 	</head>
 	<body>
 	<!-- Principal conteneur -->
-		<main class="page-container">				
-			<!-- bloc-0 -->
+		<div class="page-container">				
+			<!-- bloc-0- Header -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
 					<nav class="navbar row">
@@ -51,7 +57,7 @@
 					</nav>
 				</div>
 			</header>
-			<!-- bloc-0 END -->
+			<!-- bloc-0-header END -->
 
 			<!-- bloc-1-presentation -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -74,7 +80,7 @@
 			<!-- bloc-2-services -->
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row med-width-whitespace">
+					<div class="row tight-width-whitespace">
 						<p class="col-sm-12 text-center h3">
 							La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 						</p>
@@ -114,16 +120,9 @@
 							</p>
 						</div>
 					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<!-- Image texte a enlever-->
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
-						</div>
-					</div>
-					<div class="row new-width">
-						<blockquote class="text-center new-quote">
-							La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.Cela nous a aidé à doubler nos ventes en ligne à Lyon.
+					<div class="row tight-width-whitespace">
+						<blockquote class="text-center new-quote"><span class="fa fa-xs fa-quote-left new-fa"></span>
+							La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.<span class="fa fa-xs fa-quote-right new-fa"></span>
 						</blockquote>
 						<p class="text-center">Maxime, Guilbard, PDG de À vos fourchettes</p>
 					</div>
@@ -136,11 +135,14 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
-							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-							</h2>
+							<p class="mg-md text-center new-pSize tc-white">
+								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
+							</p>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
+							</p>
+							<p class="text-center">
+								<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a>
 							</p>
 						</div>
 					</div>
@@ -149,17 +151,16 @@
 			<!-- bloc-3-what-i-do END -->
 
 			<!-- bloc-4-portfolio -->
-			<article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<!-- Image texte a enlever-->
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-						</div>
+					<div class="row tight-width-whitespace">
+						<p class="statement-bloc-text">
+							Nous travaillons avec beaucoup de clients, voici nos réalisations.
+						</p>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<article class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_mini.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_mini.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" class="img-responsive portfolio-thumb new-mgPic" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -168,7 +169,7 @@
 							</p>
 						</article>
 						<article class="col-sm-6">
-							<a href="#" alt="Création d'un site web pour un journal local par La Chouette agence" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_mini.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour un journal local par La Chouette agence" /></a>
+							<a href="#" alt="Création d'un site web pour un journal local par La Chouette agence" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_mini.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Création d'un site web pour un journal local par La Chouette agence" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -179,7 +180,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<article class="col-sm-6">
-							<a href="#" alt="Création d'un site internet pour un voyageur par la Chouette agence" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur par la Chouette agence"/></a>
+							<a href="#" alt="Création d'un site internet pour un voyageur par la Chouette agence" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Création d'un site internet pour un voyageur par la Chouette agence"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -188,7 +189,7 @@
 							</p>
 						</article>
 						<article class="col-sm-6">
-							<a href="#" alt="Conception d'un site web pour agence de mariage par la Chouette agence" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Conception d'un site web pour agence de mariage par la Chouette agence" /></a>
+							<a href="#" alt="Conception d'un site web pour agence de mariage par la Chouette agence" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Conception d'un site web pour agence de mariage par la Chouette agence" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -198,7 +199,7 @@
 						</article>
 					</div>
 				</div>
-			</article>
+			</section>
 			<!-- bloc-4-portfolio END -->
 
 			<!-- bloc-5-cta -->
@@ -290,7 +291,8 @@
 				</div>
 			</footer>
 			<!-- Footer - bloc-8 END -->
-		</main>
+		</div>
 		<!-- Principal conteneur END -->
+
 	</body>
 </html>
