--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
 								</li>
 								<li>
 								</li>
-								<li>
-									<a href="contact.html">Contact &gt;</a>
+								<li class="active"> 
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
