--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 			<script src="./js/bootstrap.min.js"></script>
 			<script src="./js/blocs.js"></script>
 			<script src="./js/jqBootstrapValidation.min.js"></script>
-			<script src="./js/formHandler.min.js"></script>
 			<script defer src="./js/jquery.touchSwipe.min.js"></script>
 			<script defer src="./js/gmaps.min.js"></script>
 		
@@ -37,20 +36,20 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Web design Lyon logo meilleure agence web" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Web design Lyon logo meilleure agence web" class="new-logoHeight" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
-								<li>
+								<li class="active">
 									<a href="index.html">Accueil</a>
 								</li>
 								<li>
 								</li>
 								<li>
-									<a href="contact.html">Contact &gt;</a>
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -64,7 +63,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence websedign Lyon" />
+							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence websedign Lyon" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								La chouette agence.
 							</h1>
@@ -94,7 +93,7 @@
 								Web design
 							</h2>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -102,7 +101,7 @@
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h2 class="mg-md text-center">
-								&nbsp;Stratégie
+								Stratégie
 							</h2>
 							<p class="text-center ">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -205,10 +204,16 @@
 			<!-- bloc-5-cta -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 				<div class="container bloc-lg">
-					<div class="row">
-						<h2 class="mg-md text-center tc-white">
-							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+					<div class="row black-background tight-width-whitespace">
+						<h2 class="mg-md  text-center tc-white">
+						Entreprise web design à Lyon
 						</h2>
+						<h3 class="mg-md text-center new-normal tc-white">
+							Prêt pour redonner vie à votre projet ?
+						</h3>
+						<p class="col-sm12 text-center h4 new-normal tc-white">
+							Contactez notre équipe !
+						</p>
 						<div class="col-sm-12 text-center">
 							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
@@ -222,68 +227,40 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
-								La chouette agence - Agence web basée à Lyon.<br>
+							<p class="text-center new-black">
+								La chouette agence
 							</p>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre twitter"><span class="fa fa-twitter icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre facebook"><span class="fa fa-facebook icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre dribble"><span class="fa fa-dribbble icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre instagram"><span class="fa fa-instagram icon-md new-black"></span></a>
 									</div>
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-sm-4">
+								<div class="col-sm-4 new-black">
 									Partenaires
 										<ul>
-											<li><a href="voiture.com">voiture.com</a></li>
-											<li><a href="pizza.com">pizza.com</a></li>
-											<li><a href="matoiture.com">matoiture.com</a></li>
-											<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+											<li><a href="voiture.com" class="new-black">voiture</a></li>
+											<li><a href="pizza.com" class="new-black">pizza.com</a></li>
+											<li><a href="matoiture.com" class="new-black">matoiture.com</a></li>
+											<li><a href="immobilierseo.com" class="new-black">immobilierseo.com</a></li>
 										</ul>		
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 1
-									<ul>
-										<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-										<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-										<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-										<li><a href="123seoture.com">123seo.com</a></li>
-										<li><a href="123site.com">123site.com</a></li>
-										<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-										<li><a href="listeagence.com">listeagence.com</a></li>
-										<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-										<li><a href="listeseo.com">listeseo.com</a></li>
-									</ul>
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 2
-									<ul>
-										<li><a href="betterseo.com">betterseo.com</a></li>
-										<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-										<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-										<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-										<li><a href="liensagogo.com">liensagogo.com</a></li>
-										<li><a href="backlink.com">backlink.com</a></li>
-										<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-										<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-										<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
