--- a/contact.html
+++ b/contact.html
@@ -29,94 +29,103 @@
 	</head>
 	<body>
 	<!-- Principal conteneur -->
-		<div class="page-container">				
-			<!-- bloc-0 -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="page-container">
+			<!-- bloc-0- Header -->
+			<header class="bloc bgc-white l-bloc" id="bloc-0">
 				<div class="container bloc-sm">
-					<nav class="navbar row">
+					<nav class="navbar row" aria-label="menu principal">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Web design Lyon logo meilleure agence web" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo la Chouette agence meilleure agence webesign de Lyon" class="new-logoHeight" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								<span class="sr-only">Menu de navigation principal</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
-								<li>
-									<a href="index.html">Accueil</a>
+								<li class="navbar-item">
+									<a href="index.html" class="nav-link">Accueil</a>
 								</li>
-								<li>
-								</li>
-								<li class="active"> 
-									<a href="contact.html">Contact</a>
+								<li class="navbar-item">
+									<a href="contact.html" class="nav-link">Contact</a>
 								</li>
 							</ul>
 						</div>
 					</nav>
 				</div>
 			</header>
-			<!-- bloc-0 END -->
+			<!-- bloc-0-header END -->
 
 			<!-- bloc-6 -->
-			<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<section class="bloc bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 				<div class="container bloc-lg">
-					<div class="row">
+					<div class="row text-center black-background tight-width-whitespace">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text">
+							<h1 class="text-center hero-bloc-text white">
 								Parlons web design !
 							</h1>
-							<p class="text-center mg-lg tight-width-whitespace">
+							<p class="text-center mg-lg tight-width-whitespace white">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 							</p>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-6 END -->
 
 			<!-- bloc-7 -->
-			<div class="bloc bgc-white l-bloc" id="bloc-7">
+			<section class="bloc bgc-white l-bloc" id="bloc-7">
 				<div class="container bloc-lg">
 					<div class="row">
+						<h2 class="mg-md text-center new-black">
+							Contactez la meilleure agence webdesign à Lyon
+						</h2>
+					</div>
+					<div class="row">
+						<P class="new-Pmg  mg-md text-center new-black mg-lg bloc-sm ">
+							Nous travaillons sur les projets de création de sites internet, de refonte, quelque soit votre secteur d'activité. Notre équipe d'experts, met un point d'honneur à contribuer à la réussite de vos projets, en vous fournissant des designs de qualité.
+						</p>
+					</div>
+					<section class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-								<div class="form-group">
-									<label>
-										Nom
-									</label>
-									<input id="name" class="form-control" required />
-								</div>
-								<div class="form-group">
-									<label>
+							<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Erreur lors de l'envoi du formulaire, l'un des  champs obligatoire n'est pas correctement complété, merci de vérifer et retentter.">
+								<p class="form-group">
+										<label for="name">
+											Nom
+										</label>
+					          <input id="name" name="name" class="form-control" required />
+									</p>
+								<p class="form-group">
+									<label for="email">
 										Adresse email
 									</label>
-									<input id="email" class="form-control" type="email" required />
-								</div>
-								<div class="form-group">
-									<label>
+									<input id="email" name="email" class="form-control" type="email" required />
+								</p>
+								<p class="form-group">
+									<label for="input_504">
 										Comment nous avez-vous connu ?
 									</label>
-									<input class="form-control" type="email" required id="input_504" />
-								</div>
-								<div class="form-group">
-									<label>
+									<input id="input_504" name="input_504" class="form-control" type="text" maxlength="100" required />
+								</p>
+								<p class="form-group">
+									<label for="message">
 										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-								</div> 
+									</label><textarea id="message" name="name" class="form-control" rows="4" cols="50" required></textarea>
+								</p> 
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
 								</button>
 							</form>
 						</div>
-						<div class="col-sm-6">
-							<p>
-								contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						<div class="col-sm-6 h4">
+							<h3 class="col-10"> Nos coordonnées </h3>
+							<p class="col-10">
+								2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>contact@lachouetteagence.com<br>
 							</p>
 						</div>
-					</div>
+					</section>
 				</div>
-			</div>
+			</section>
 			<!-- bloc-7 END -->
 
 			<!-- ScrollToTop Button -->
@@ -128,29 +137,43 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
-								La chouette agence - Agence web basée à Lyon.<br>
-							</p>
+							<h3 class="row text-center new-black mg-md">
+								La chouette agence
+							</h3>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre twitter"><span class="fa fa-twitter icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre facebook"><span class="fa fa-facebook icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre dribble"><span class="fa fa-dribbble icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="Notre instagram"><span class="fa fa-instagram icon-md new-black"></span></a>
 									</div>
+								</div>
+							</div>
+							<div class="row mg-md">
+								<!-- Suppression des liens superflux -->
+								<div class="col-sm-12 mg-lg  text-center">
+									<p class="col-12 new-black h4">
+										Partenaires
+									</p>
+									<ul class="col-12 new-list tight-width-whitespace ">
+										<li class="col-sm-3"><a href="voiture.com" class="new-black" target="blank" aria-label="Site de notre partenaire">voiture</a></li>
+										<li class="col-sm-3"><a href="pizza.com" class="new-black" target="blank" aria-label="Site de notre partenaire">pizza</a></li>
+										<li class="col-sm-3"><a href="matoiture.com" class="new-black" target="blank" aria-label="Site de notre partenaire">matoiture</a></li>
+										<li class="col-sm-3"><a href="immobilierseo.com" class="new-black" target="blank" aria-label="Site de notre partenaire">immobilierseo</a></li>
+									</ul>		
 								</div>
 							</div>
 						</div>
