--- a/index.html
+++ b/index.html
@@ -32,24 +32,22 @@
 	<!-- Principal conteneur -->
 		<div class="page-container">				
 			<!-- bloc-0- Header -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
+			<header class="bloc bgc-white l-bloc" id="bloc-0">
 				<div class="container bloc-sm">
-					<nav class="navbar row">
+					<nav class="navbar row" aria-label="menu principal">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Web design Lyon logo meilleure agence web" class="new-logoHeight" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo la Chouette agence meilleure agence webesign de Lyon" class="new-logoHeight" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								<span class="sr-only">Menu de navigation principal</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
-								<li class="active">
-									<a href="index.html">Accueil</a>
+								<li class="navbar-item">
+									<a href="index.html" class="nav-link">Accueil</a>
 								</li>
-								<li>
-								</li>
-								<li>
-									<a href="contact.html">Contact</a>
+								<li class="navbar-item">
+									<a href="contact.html" class="nav-link">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -59,15 +57,15 @@
 			<!-- bloc-0-header END -->
 
 			<!-- bloc-1-presentation -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="banner">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence websedign Lyon" />
-							<h1 class="text-center hero-bloc-text tc-white ">
+							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence websedign Lyon logo" />
+							<h1 class="text-center hero-bloc-text new-tc ">
 								La chouette agence.
 							</h1>
-							<div class="text-center">
+							<div class="text-center" aria-label="Bouton vers page contact">
 								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
@@ -79,7 +77,7 @@
 			<!-- bloc-2-services -->
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row tight-width-whitespace">
+					<div class="row tight-width-whitespace" aria-label="Nos services">
 						<p class="col-sm-12 text-center h3">
 							La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 						</p>
@@ -120,8 +118,11 @@
 						</div>
 					</div>
 					<div class="row tight-width-whitespace">
-						<blockquote class="text-center new-quote"><span class="fa fa-xs fa-quote-left new-fa"></span>
-							La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.<span class="fa fa-xs fa-quote-right new-fa"></span>
+						<blockquote class="text-center new-quote" aria-label="Citation d'un de nos clients">
+							<p>
+								<span class="fa fa-xs fa-quote-left new-fa"></span>
+								La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.<span class="fa fa-xs fa-quote-right new-fa"></span>
+							</p>
 						</blockquote>
 						<p class="text-center">Maxime, Guilbard, PDG de À vos fourchettes</p>
 					</div>
@@ -132,7 +133,7 @@
 			<!-- bloc-3-what-i-do -->
 			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace black-background">
+					<div class="row tight-width-whitespace black-background"  aria-label="Nos savoirs-faire">
 						<div class="col-sm-12">
 							<p class="mg-md text-center new-pSize tc-white">
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
@@ -151,9 +152,9 @@
 
 			<!-- bloc-4-portfolio -->
 			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace">
-						<p class="statement-bloc-text">
+				<div class="container bloc-lg"  aria-label="Nos réalisations">
+					<div class="row tight-width-whitespace ">
+						<p class="statement-bloc-text ">
 							Nous travaillons avec beaucoup de clients, voici nos réalisations.
 						</p>
 					</div>
@@ -204,18 +205,18 @@
 			<!-- bloc-5-cta -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 				<div class="container bloc-lg">
-					<div class="row black-background tight-width-whitespace">
-						<h2 class="mg-md  text-center tc-white">
-						Entreprise web design à Lyon
-						</h2>
-						<h3 class="mg-md text-center new-normal tc-white">
-							Prêt pour redonner vie à votre projet ?
+					<div class="row black-background tight-width-whitespace new-pos"  aria-label="Pour nous contacter">
+						<h3 class="mg-md  text-center tc-white">
+						La meilleure web design à Lyon vous attend
 						</h3>
-						<p class="col-sm12 text-center h4 new-normal tc-white">
+						<h4 class="mg-md text-center tc-white">
+							Prêt pour redonner vie à votre projet ?
+						</h4>
+						<h4 class="col-sm12 text-center tc-white">
 							Contactez notre équipe !
-						</p>
+						</h4>
 						<div class="col-sm-12 text-center">
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Bouton vers page contact">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -227,9 +228,9 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center new-black">
+							<h3 class="row text-center new-black  mg-md">
 								La chouette agence
-							</p>
+							</h3>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
@@ -252,17 +253,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-sm-4 new-black">
-									Partenaires
-										<ul>
-											<li><a href="voiture.com" class="new-black">voiture</a></li>
-											<li><a href="pizza.com" class="new-black">pizza.com</a></li>
-											<li><a href="matoiture.com" class="new-black">matoiture.com</a></li>
-											<li><a href="immobilierseo.com" class="new-black">immobilierseo.com</a></li>
-										</ul>		
-								</div>
-							</div>
+
 						</div>
 					</div>
 				</div>
