modification btn contact ajout aria

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row" aria-label="menu principal">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo la Chouette agence meilleure agence webesign de Lyon" class="new-logoHeight" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la Chouette agence, meilleure agence webesign de Lyon" class="new-logoHeight" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Menu de navigation principal</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -61,12 +61,12 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence websedign Lyon logo" />
+							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence webdesign Lyon, logo" />
 							<h1 class="text-center hero-bloc-text new-tc ">
 								La chouette agence.
 							</h1>
-							<div class="text-center" aria-label="Bouton vers page contact">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<div class="text-center">
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Bouton vers page contact">Contact</a>
 							</div>
 						</div>
 					</div>
