--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, agence webdesign Lyon, logo" />
+							<img src="img/logo.png" class="center-block image-resize-mode new-logoWidth" alt="La chouette agence, entreprise webdesign Lyon, logo" />
 							<h1 class="text-center hero-bloc-text new-tc ">
-								La chouette agence.
+								La chouette agence
 							</h1>
-							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Bouton vers page contact">Contact</a>
+							<div class="text-center" aria-label="Bouton vers page contact">
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -77,14 +77,14 @@
 			<!-- bloc-2-services -->
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row tight-width-whitespace" aria-label="Nos services">
+					<div class="row med-width-whitespace" aria-label="Nos services">
 						<p class="col-sm-12 text-center h3">
 							La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 						</p>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
 						<div class="col-sm-4">
-							<div class="text-center">
+							<div class="text-center" role="img" aria-label="Représentation d'une icone webdesign">
 								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h2 class="mg-md text-center">
@@ -96,7 +96,7 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" role="img" aria-label="Représentation d'une icone stratégie"></span>
 							</div>
 							<h2 class="mg-md text-center">
 								Stratégie
@@ -107,7 +107,7 @@
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" role="img" aria-label="Représentation d'une icone illustration"></span>
 							</div>
 							<h2 class="mg-md text-center">
 								Illustrations
@@ -160,7 +160,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<article class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_mini.jpg" alt="Refonte d'un site web pour un journal local par La Chouette agence" class="img-responsive portfolio-thumb new-mgPic" /></a>
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_mini.jpg" alt="Image représentant la refonte d'un site web pour un journal local par La Chouette agence" class="img-responsive portfolio-thumb new-mgPic" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -169,7 +169,7 @@
 							</p>
 						</article>
 						<article class="col-sm-6">
-							<a href="#" alt="Création d'un site web pour un journal local par La Chouette agence" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_mini.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Création d'un site web pour un journal local par La Chouette agence" /></a>
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_mini.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Image représentant la création d'un site web pour un journal local par La Chouette agence" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -180,7 +180,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<article class="col-sm-6">
-							<a href="#" alt="Création d'un site internet pour un voyageur par la Chouette agence" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Création d'un site internet pour un voyageur par la Chouette agence"/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Image représenant la création d'un site internet pour un voyageur par la Chouette agence"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -189,7 +189,7 @@
 							</p>
 						</article>
 						<article class="col-sm-6">
-							<a href="#" alt="Conception d'un site web pour agence de mariage par la Chouette agence" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Conception d'un site web pour agence de mariage par la Chouette agence" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb new-mgPic" alt="Image représentant la conception d'un site web pour agence de mariage par la Chouette agence"/></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -207,7 +207,7 @@
 				<div class="container bloc-lg">
 					<div class="row black-background tight-width-whitespace new-pos"  aria-label="Pour nous contacter">
 						<h3 class="mg-md  text-center tc-white">
-						La meilleure web design à Lyon vous attend
+						Notre entreprise web design basée à Lyon vous attend
 						</h3>
 						<h4 class="mg-md text-center tc-white">
 							Prêt pour redonner vie à votre projet ?
@@ -215,8 +215,8 @@
 						<h4 class="col-sm12 text-center tc-white">
 							Contactez notre équipe !
 						</h4>
-						<div class="col-sm-12 text-center">
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Bouton vers page contact">Contact</a>
+						<div class="col-sm-12 text-center" aria-label="Bouton vers page contact">
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -228,7 +228,7 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<h3 class="row text-center new-black  mg-md">
+							<h3 class="row text-center new-black mg-md">
 								La chouette agence
 							</h3>
 							<div class="row row-no-gutters social">
