modification styles en fichier min

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,11 @@
 			<meta name="description" content="Contactez La Chouette agence, l'entreprise webdesign lyonnaise. Pour vos projets web, design, faites votre demande de collaboration avec notre agence.">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 			<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+			<!-- Follow pour robots -->
 			<meta name="robots" content="index, follow">
 			<!-- css minifié-->
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="style.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 		
