--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 			<meta name="description" content="Meilleure entreprise webdisgn de Lyon. La Chouette agence vous aide pour vos demande concernant: stratégie web, web design, illustrations, design de site web.">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 			<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-			<!-- Follow pour rbots -->
+			<!-- Follow pour robots -->
 			<meta name="robots" content="index, follow">
 			
 			<!-- css minifié-->
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="style.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
@@ -19,7 +19,6 @@
 			<script src="./js/jquery-2.1.0.min.js"></script>
 			<script src="./js/bootstrap.min.js"></script>
 			<script src="./js/blocs.js"></script>
-			<script src="./js/jqBootstrapValidation.min.js"></script>
 			<script defer src="./js/jquery.touchSwipe.min.js"></script>
 			<script defer src="./js/gmaps.min.js"></script>
 		
